syntax = "proto3";

service DiscountGeneratorService {
	rpc GenerateCodes (GenerateRequest) returns (GenerateResponse);
}

message GenerateRequest {
  uint32 count = 1;
  uint32 length = 2;
}

message GenerateResponse {
  repeated string codes = 1;
}
