syntax = "proto3";


service CodeConsumer {
	rpc ConsumeCode (ConsumeCodeRequest) returns (ConsumeCodeResponse);
}

message ConsumeCodeRequest {
  string code = 1;
}

message ConsumeCodeResponse {
  bool success = 1;
}
